@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,13 +22,25 @@
  */
 
 /*
- * @test
+ * @test id=zeroClass
  * @bug 4870651 6715757
  * @summary javap should recognize generics, varargs, enum;
  *          javap prints "extends java.lang.Object"
  * @modules jdk.jdeps/com.sun.tools.javap
- * @build T4870651 Test
- * @run main T4870651
+ * @compile Test.java
+ * @run main/othervm -DpreviewClass=false T4870651
+ * @comment runtime in preview or not should not affect javac/javap behavior
+ */
+
+/*
+ * @test id=previewClass
+ * @bug 4870651 6715757
+ * @summary javap should recognize generics, varargs, enum;
+ *          javap prints "extends java.lang.Object"
+ * @modules jdk.jdeps/com.sun.tools.javap
+ * @compile --enable-preview -source ${jdk.version} -XDforcePreview Test.java
+ * @run main/othervm -DpreviewClass=true T4870651
+ * @comment runtime in preview or not should not affect javac/javap behavior
  */
 
 import java.io.*;
@@ -46,7 +58,9 @@ public class T4870651 {
                "v1(java.lang.String...)");
 
         verify("Test$Enum",
-               "flags: (0x4030) ACC_FINAL, ACC_SUPER, ACC_ENUM",
+               Boolean.getBoolean("previewClass") // .65535 instead of .0
+                       ? "flags: (0x4030) ACC_FINAL, ACC_IDENTITY, ACC_ENUM"
+                       : "flags: (0x4030) ACC_FINAL, ACC_SUPER, ACC_ENUM",
                "flags: (0x4019) ACC_PUBLIC, ACC_STATIC, ACC_FINAL, ACC_ENUM");
 
         if (errors > 0)
